--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,13 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Environment variables
+.env
+
+# Dependencies
 node_modules
+
+# Build outputs
 dist
 dist-ssr
 *.local
@@ -22,4 +28,3 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-.evn
