--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "openai": "^4.77.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-easy-crop": "^5.2.0",
     "react-icons": "^5.4.0",
     "react-quill": "^2.0.0",
     "react-redux": "^9.2.0",
